# beholder

./: .gitignore  CMakeLists.txt  README.md  fsm.cpp  fsm.hpp  install.sh  main.cpp
classes/image_loader/: image_loader.cpp
classes/roi/: roi.cpp
fsm/: async_timer.cpp  async_timer.hpp  camera.hpp  classifier.hpp  fsm.cpp  fsm.hpp  io.hpp  main.cpp
headers/image_loader/: image_loader.hpp
headers/roi/: roi.hpp
image-loader/: CMakeLists.txt  imageloader.cpp  imageloader.hpp
matplolib-cpp/: matplotlibcpp.hpp
old_main_files/image_loader/: main.cpp
old_main_files/roi/: main.cpp
region-of-interest/: CMakeLists.txt  main.cpp  roi.cpp  roi.hpp
scripts/environment_installation_scripts/: mac_install.sh
